--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap');
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #56BBF1;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  color:#fff;
+  width: 99vw;
+  height: 100vh;
+  overflow-x: hidden;
+}
+.form-container{
+  display: flex;
+  flex-direction: column;
+}
+form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  color: #fdec8d;
+  font-size: 52px;
+  text-shadow:4px 5px #792ec4;
+  font-family: 'Rubik Moonrocks', cursive;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  margin-right: 10px;
+  
+}
+
+select{
+  border: none;
+  padding: 10px 20px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+button{
+  background-color: #792ec4;
+  padding: 10px 15px;
+  border-radius: 20px;
+  margin: 10px;
+  border: none;
+  color: #EEEEEE;
+  font-weight: bold;
+  box-shadow: 1px 1px 7px #363636;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #500e91;
 }
